import LaTeX-Driver 0.03 from CPAN
git-cpan-module:   LaTeX-Driver
git-cpan-version:  0.03
git-cpan-authorid: ANDREWF
git-cpan-file:     authors/id/A/AN/ANDREWF/LaTeX-Driver-0.03.tar.gz

--- a/t/testdata/20-complexdoc/20-complexdoc.tex
+++ b/t/testdata/20-complexdoc/20-complexdoc.tex
@@ -1,4 +1,4 @@
-% $Id: testdoc20.tex 4 2007-09-21 14:51:24Z andrew $
+% $Id: 20-complexdoc.tex 20 2007-09-23 16:05:54Z andrew $
 % Test input file for checking complete document with references, table of contents,
 % included file, bibliography and index
 % Do not make gratuitous changes here as the text is checked by the
