--- a/t/testdata/13-tableofcontents/13-tableofcontents.tex
+++ b/t/testdata/13-tableofcontents/13-tableofcontents.tex
@@ -1,4 +1,4 @@
-% $Id: testdoc13.tex 4 2007-09-21 14:51:24Z andrew $
+% $Id: 13-tableofcontents.tex 20 2007-09-23 16:05:54Z andrew $
 % Test input file for checking table of contents generation.
 % Do not make gratuitous changes here as the text is checked by the
 % test script 13-tableofcontents.t.
