--- a/t/testdata/14-makeindex/14-makeindex.tex
+++ b/t/testdata/14-makeindex/14-makeindex.tex
@@ -1,4 +1,4 @@
-% $Id: testdoc14.tex 4 2007-09-21 14:51:24Z andrew $
+% $Id: 14-makeindex.tex 22 2007-09-23 20:35:35Z andrew $
 % Test input file for checking index generation.
 % Do not make gratuitous changes here as the text is checked by the
 % test script 14-makeindex.t.
@@ -12,7 +12,10 @@
 \begin{document}
 \maketitle
 
-This is a test document that def{}ines an index term.
-\index{xyzzy}
+This is a test document that def{}ines the index terms `seal' and `sea
+lion'.  These are the example terms used in the makeindex man page.
+\index{seal}
+\index{sea lion}
+
 \printindex
 \end{document}
