--- a/t/testdata/15-bibtex/15-bibtex.tex
+++ b/t/testdata/15-bibtex/15-bibtex.tex
@@ -1,4 +1,4 @@
-% $Id: testdoc15.tex 4 2007-09-21 14:51:24Z andrew $
+% $Id: 15-bibtex.tex 20 2007-09-23 16:05:54Z andrew $
 % Test input file for checking bibliography generation
 % Do not make gratuitous changes here as the text is checked by the
 % test script 15-bibtex.t.
