--- a/t/testdata/02-brokendocs/02-brokendocs.tex
+++ b/t/testdata/02-brokendocs/02-brokendocs.tex
@@ -9,5 +9,5 @@
 \begin{document}
 \maketitleXXX
 
-This is a test document with a single line of text.
+This is a test document with a broken LaTeX command.
 \end{document}
