--- a/t/testdata/20-complexdoc/20-complexdoc.tex
+++ b/t/testdata/20-complexdoc/20-complexdoc.tex
@@ -1,4 +1,4 @@
-% $Id: 20-complexdoc.tex 20 2007-09-23 16:05:54Z andrew $
+% $Id: 20-complexdoc.tex 27 2007-09-24 20:30:43Z andrew $
 % Test input file for checking complete document with references, table of contents,
 % included file, bibliography and index
 % Do not make gratuitous changes here as the text is checked by the
@@ -56,4 +56,10 @@ This is the other page\label{otherpage} referenced elsewhere.
 \bibliography{testbib}
 \pagebreak
 \printindex
+
+\section{Colophon}
+
+This is evil -- we are def{}ining index terms after the index.
+\index{xyzzy2}
+
 \end{document}
