import LaTeX-Driver 0.05 from CPAN
git-cpan-module:   LaTeX-Driver
git-cpan-version:  0.05
git-cpan-authorid: ANDREWF
git-cpan-file:     authors/id/A/AN/ANDREWF/LaTeX-Driver-0.05.tar.gz

--- a/t/testdata/20-complexdoc/20-complexdoc.tex
+++ b/t/testdata/20-complexdoc/20-complexdoc.tex
@@ -1,4 +1,4 @@
-% $Id: 20-complexdoc.tex 27 2007-09-24 20:30:43Z andrew $
+% $Id: 20-complexdoc.tex 37 2007-09-25 20:02:31Z andrew $
 % Test input file for checking complete document with references, table of contents,
 % included file, bibliography and index
 % Do not make gratuitous changes here as the text is checked by the
@@ -35,6 +35,7 @@ Here we include another f{}ile.
 It will start on the next page.
 
 \include{testinc}
+\input{testinc2}
 
 \pagebreak
 \section{Bibliographic Citations}
