Added capture_stderr option

--- a/Changes
+++ b/Changes
@@ -14,6 +14,12 @@
 #========================================================================
 
 #------------------------------------------------------------------------
+# Version 0.11_01 - 2011-11-25
+#------------------------------------------------------------------------
+
+* Added capture_stderr option that lets you examine the STDERR of your run
+
+#------------------------------------------------------------------------
 # Version 0.09_01 - 2011-08-04
 #------------------------------------------------------------------------
 
